# marketplace

./: .gitignore  .pre-commit-config.yaml  RATING_REVIEW_SYSTEM.md  README.md  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_user_role_user_is_seller.py  0003_sellerprofile.py
accounts/templates/accounts/: login.html  register.html  seller_profile_form.html  seller_profile_view.html  seller_register.html  seller_store_view.html
locale/en/LC_MESSAGES/: django.po
locale/uk/LC_MESSAGES/: django.po
management/commands/: fix_seller_buttons.py  list_products.py
marketplace/: settings.py  urls.py  views.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/management/commands/: add_payment_methods.py
orders/migrations/: 0001_initial.py  0002_paymentmethod_order_payment_method.py
orders/templates/orders/: cart.html  order_detail.html  order_history.html
orders/templatetags/: order_filters.py
products/: add_sample_products.py  admin.py  converters.py  filters.py  forms.py  models.py  permissions.py  urls.py  views.py
products/management/commands/: add_products_to_sellers.py  add_sample_reviews.py  cleanup_orphaned_reviews.py  fix_empty_slugs.py
products/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0003_review.py
products/templates/products/: _product_card.html  add_review.html  delete_review.html  edit_review.html  (+6 more)
static/css/: style.css
templates/: base.html  home.html
