[project]
name = "pythonmarketplase"
version = "0.1.0"
description = ""
authors = [
    {name = "EgorGorb",email = "egorgorb12@gmail.com"}
]
license = {text = "n"}
readme = "README.md"
requires-python = " 3.12.10"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-filter (>=25.1,<26.0)",
    "django-render-block (>=0.11,<0.12)",
    "pillow (>=11.3.0,<12.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
